# gbe-plus

./: CMakeLists.txt  README.md  arm7.h  common.h  lcd.cpp  main.cpp  mmu.cpp  thumb_instr.cpp
src/: .directory  CMakeLists.txt  apu.cpp  apu.h  apu_data.h  arm7.cpp  arm7.h  arm_instr.cpp  common.h  compile.sh  config.cpp  config.h  core.cpp  core.h  dma.cpp  gamepad.cpp  gamepad.h  gbe.ini  gbe_plus  lcd.cpp  lcd.h  lcd_data.h  main.cpp  mmu.cpp  mmu.h  opengl.cpp  swi.cpp  thumb_instr.cpp  timer.h
src/common/: CMakeLists.txt  cgfx_common.cpp  cgfx_common.h  common.h  config.cpp  config.h  core_base.h  core_emu.h  debug_util.cpp  debug_util.h  dmg_core_pad.h  gx_util.cpp  gx_util.h  hash.cpp  hash.h  info.cpp  info.h  net_util.cpp  net_util.h  ogl_util.cpp  ogl_util.h  osd.cpp  util.cpp  util.h
src/common/info/: info.bat  info.sh
src/data/chip_gate/: bcg_list.txt  netgate.html  netgate.js
src/data/gbma/: RomList.cgb  exchange.txt  gbe_plus_bk7j_mail.txt  gbe_plus_mail.txt  h0000.cgb  map_menu.txt  server_list.txt  youhei_menu.txt
src/data/gbma/AGB-AGTJ/: 100.gtexcrs001.cgb  ghosttestfile.cgb  gtconfig.cgb  gtgst00.cgb  gtgst01.cgb  gtgst02.cgb  gtgst03.cgb  gtgst04.cgb  gtgst05.cgb  gtgst06.cgb  gtrk00.cgb  gtrk04.cgb  gtrk05.cgb  gtrk06.cgb
src/data/gbma/CGB-B9AJ/: index.html
src/data/gbma/CGB-BMVJ/: h0000.cgb
src/data/gbma/CGB-BWWJ/: map_menu.txt  mbox_serial.txt
src/data/ini/: AGB_BOKTAI2______U32E.ini  AGB_BOKTAI2______U32P.ini  AGB_BOKTAI3______U33J.ini  AGB_BOKTAI_______U3IE.ini  AGB_BOKTAI_______U3IP.ini  AGB_BOKUTAI______U3IJ.ini  AGB_DRILL_DOZER__V49E.ini  AGB_GBA_TV_______DTV0.ini  AGB_GLUCOBOYVER1_BJGE.ini  AGB_HAPPYPANECHU_KHPJ.ini  AGB_LEGENDZSHIMA_BLJJ.ini  AGB_LEGENDZSON___BLVJ.ini  AGB_MADEINWARIO__AZWJ.ini  AGB_MP3PLAYER____ZMDE.ini  AGB_MUSIC_R_MP3__ZMPE.ini  AGB_MUSIC_R_MP3__ZMPJ.ini  AGB_PLAYAN_______ZMAJ.ini  AGB_PLAYYANMICRO_ZMBJ.ini  AGB_ROCKEXE4.5RO_BR4J.ini  AGB_SENNENKAZOKU_BKAJ.ini  AGB_WARIOTWISTED_RZWE.ini  AGB_YOSHI_TOPSY__KYGE.ini  AGB_ZOKTAI_______U32J.ini  DMG_BOMCOL__________.ini  DMG_GENCOL__________.ini  DMG_MOMOTARODENGEKI2.ini  DMG_MORTALKOMBATI&II.ini  DMG_MORTALKOMBAT_DUO.ini  DMG_NP_M_MENU__MENU_.ini  DMG_PM_CRYSTAL_BXTJ_.ini  DMG_POCKETSONAR_____.ini  DMG_SUPERCHINESE_123.ini  DMG_TETRIS_SET______.ini
src/data/jukebox/: karaoke.txt  music.txt
src/data/misc/: .directory
src/data/misc/campho_web_interface/: campho.html  campho.js
src/data/misc/net_gate_interface/: netgate.html  netgate.js
src/data/play_yan/: music.txt  thumbnails.txt  video.txt
src/data/shaders/: 2xBR.fs  4xBR.fs  8_bit.fs  bad_bloom.fs  badder_bloom.fs  chrono.fs  dmg_mode.fs  fragment.fs  gba_gamma.fs  gbc_gamma.fs  grayscale.fs  invert_x.vs  lcd_mode.fs  pastel.fs  pixelate.fs  scale2x.fs  scale3x.fs  sepia.fs  spotlight.fs  tv_mode.fs  vertex.vs  washout.fs
src/dmg/: .directory  CMakeLists.txt  apu.cpp  apu.h  apu_data.h  camera.cpp  common.h  core.cpp  core.h  custom_graphics.cpp  custom_graphics.h  custom_graphics_data.h  debug.cpp  dmg07.cpp  gamepad.cpp  gamepad.h  gb_kiss_link.cpp  gbma.cpp  huc1.cpp  huc3.cpp  infrared.cpp  lcd.cpp  lcd.h  lcd_data.h  mbc1.cpp  mbc2.cpp  mbc3.cpp  mbc5.cpp  mbc6.cpp  mbc7.cpp  mmm01.cpp  mmu.cpp  mmu.h  opengl.cpp  sio.cpp  sio.h  sio_data.h  sm83.cpp  sm83.h  tama5.cpp  (+2 more)
src/docs/: .directory  .~lock.manual.odt#  GBMA_Mobile_Professional_Baseball.txt  manual.odt
src/docs/technical/: .directory  AGB_006.txt  Advance_Movie_Adapter.txt  Agatsuma_TV_Tuner.txt  Barcode_Boy.txt  Barcode_Taisen_Bardigun.txt  Battle_Chip_Gate.txt  Bayer_Didget_Glucose_Meter.txt  Campho_Advance.txt  DMG_07.txt  Full_Changer.txt  GBA_Screen_Stretch.txt  GBC_IR.txt  GBMA_EX_Monopoly.txt  GBMA_Game_Boy_Wars_3.txt  GBMA_Hello_Kitty_no_Happy_House.txt  GBMA_Mario_Kart_Advance.txt  GBMA_Mobile_Professional_Baseball.txt  GBMA_Mobile_Trainer.txt  GBMA_Net_de_Get.txt  GBMA_Zen_Nihon_GT_Senshuken.txt  GB_KISS_LINK.txt  Glucoboy.txt  HCV_1000.txt  Joy_Carry_Cartridge.txt  Jukebox.txt  Magic_Reader.txt  Magical_Watch.txt  Mobile_Adapter_GB.txt  Multi_Plust_On_System.txt  Nintendo_MP3_Player.txt  Play_Yan.txt  Pocket_Sonar.txt  Power_Antenna.txt  Sewing_Machines.txt  Soul_Doll_Adapter.txt  Turbo_File_Advance.txt  Turbo_File_GB.txt  Ubisoft_Thrustmaster_Pedometer.txt  Vaus_Controller.txt  (+5 more)
src/gba/: CMakeLists.txt  am3.cpp  apu.cpp  apu.h  apu_data.h  arm7.cpp  arm7.h  arm_instr.cpp  campho.cpp  cheats.cpp  common.h  config.h  core.cpp  core.h  debug.cpp  dma.cpp  gamepad.cpp  gamepad.h  gbma.cpp  glucoboy.cpp  gpio.cpp  jukebox.cpp  lcd.cpp  lcd.h  lcd_data.h  mmu.cpp  mmu.h  nmp.cpp  opengl.cpp  play_yan.cpp  sio.cpp  sio.h  sio_data.h  swi.cpp  thumb_instr.cpp  timer.h  tv_tuner.cpp
src/min/: .directory  CMakeLists.txt  apu.cpp  apu.h  apu_data.h  common.h  core.cpp  core.h  debug.cpp  gamepad.cpp  gamepad.h  infrared.cpp  lcd.cpp  lcd.h  lcd_data.h  mmu.cpp  mmu.h  opengl.cpp  s1c88.cpp  s1c88.h  timer.h
src/nds/: .directory  CMakeLists.txt  apu.cpp  apu.h  apu_data.h  arm7.cpp  arm7.h  arm7_arm_instr.cpp  arm7_thumb_instr.cpp  arm9.cpp  arm9.h  arm9_arm_instr.cpp  arm9_thumb_instr.cpp  common.h  core.cpp  core.h  cp15.cpp  cp15.h  debug.cpp  dma.cpp  gamecard.cpp  gamepad.cpp  gamepad.h  gx_render.cpp  lcd.cpp  lcd.h  lcd_data.h  microphone.cpp  mmu.cpp  mmu.h  ntr_027.cpp  opengl.cpp  rtc.cpp  slot2.cpp  swi.cpp  timer.h
src/qt/: CMakeLists.txt  cgfx.cpp  cgfx.h  cheat_menu.cpp  cheat_menu.h  con_ir_menu.cpp  con_ir_menu.h  data_dialog.cpp  data_dialog.h  debug_dmg.cpp  debug_dmg.h  general_settings.cpp  general_settings.h  magic_reader_menu.cpp  magic_reader_menu.h  main.cpp  main_menu.cpp  main_menu.h  mpos_menu.cpp  mpos_menu.h  mw_menu.cpp  mw_menu.h  ogl_manager.cpp  ogl_manager.h  pp2_menu.cpp  pp2_menu.h  ps_menu.cpp  ps_menu.h  qt_common.cpp  qt_common.h  render.cpp  render.h  rtc_menu.cpp  rtc_menu.h  screens.cpp  screens.h  tbf_menu.cpp  tbf_menu.h  utp_menu.cpp  utp_menu.h  (+6 more)
src/sgb/: CMakeLists.txt  core.cpp  core.h  debug.cpp  gamepad.cpp  gamepad.h  lcd.cpp  lcd.h  opengl.cpp  sm83.cpp  sm83.h  z80.cpp  z80.h
(+3 files in other folders)
